--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -51,3 +51,56 @@
     font-size: 14px;
   }
 }
+.search {
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  min-height: 533px;
+}
+.search__inner {
+  padding: 155px 0px 100px;
+  color: #fff;
+  text-align: center;
+  &-title {
+    font-size: 48px;
+    margin-bottom: 10px;
+    font-weight: 700;
+    line-height: 72px;
+  }
+  &-text {
+    font-size: 20px;
+    margin-bottom: 50px;
+    font-weight: 500;
+    line-height: 30px;
+  }
+  &-form {
+    max-width: 670px;
+    margin: 0 auto;
+    margin-top: 60px;
+    position: relative;
+    input {
+      display: block;
+      width: 100%;
+      box-shadow: 0px 1px 10px 0px rgba(124, 178, 64, 0.75);
+      border-radius: 4px;
+      height: 56px;
+      border: none;
+      font-size: 14px;
+      font-weight: 500;
+      padding-left: 25px;
+      padding-right: 60px;
+
+      &::placeholder {
+        color: #90a4ae;
+        font-weight: 500;
+      }
+    }
+  }
+}
+button {
+  position: absolute;
+  border: none;
+  background-color: transparent;
+  right: 20px;
+  top: 16px;
+}
