added product section

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -76,7 +76,7 @@
   &-form {
     max-width: 670px;
     margin: 0 auto;
-    margin-top: 60px;
+    margin-top: 50px;
     position: relative;
     input {
       display: block;
@@ -97,10 +97,115 @@
     }
   }
 }
-button {
+.search_btn {
   position: absolute;
   border: none;
   background-color: transparent;
   right: 20px;
   top: 16px;
+}
+.products {
+  padding: 117px 0px;
+  background-color: $grey;
+}
+.products__inner-btn {
+  text-align: center;
+  margin-top: 30px;
+  margin-bottom: 60px;
+  button {
+    padding: 12px 21px;
+    border: none;
+    background-color: #fff;
+    color: $bg;
+    cursor: pointer;
+    & + button {
+      margin-left: 5px;
+    }
+    &.mixitup-control-active {
+      background-color: $red;
+      color: #fff;
+    }
+  }
+}
+.products__inner-box {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+.product__item {
+  max-width: 440px;
+  width: 100%;
+  box-shadow: 0px 1px 2px 0px rgba(205, 214, 222, 0.75);
+  margin-bottom: 30px;
+  &-img {
+    min-height: 250px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    display: block;
+  }
+  &-content {
+    display: flex;
+    justify-content: space-between;
+    padding: 10px 30px;
+    min-height: 90px;
+    align-items: center;
+    font-weight: 500;
+    border-bottom: 1px solid #e7ecf2;
+  }
+  &-name {
+    max-width: 310px;
+  }
+  &-title {
+    color: $bg;
+    font-size: 18px;
+    display: block;
+  }
+  &-category {
+    color: $green;
+    display: block;
+    font-size: 14px;
+    font-weight: 700;
+  }
+  &-price {
+    color: $bg;
+    font-size: 20px;
+  }
+  &-info {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    min-width: 70px;
+    padding: 10px 30px;
+  }
+  &-author {
+    display: flex;
+    align-items: center;
+    .avatar {
+      width: 30px;
+      height: 30px;
+      border-radius: 50%;
+      margin-right: 14px;
+      background-position: center;
+      display: inline-block;
+      background-repeat: no-repeat;
+      background-size: cover;
+    }
+    span {
+      font-size: 14px;
+      font-weight: 500;
+    }
+  }
+}
+.products__bottom-btn {
+  text-align: center;
+  &-product__btn {
+    margin: 45px 5px 0;
+    box-shadow: 0px 1px 3px 0px rgba(204, 216, 228, 0.75);
+    padding: 20px 30px;
+    border: none;
+    background-color: #fff;
+    color: $bg;
+    cursor: pointer;
+  }
 }
