--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -51,3 +51,10 @@ body {
   text-align: center;
   margin-bottom: 58px;
 }
+.rate-star {
+  display: inline-block;
+  margin-right: 13px;
+}
+// .jq-ry-normal-group .jq-ry-group {
+//   display: none;
+// }
