--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -64,13 +64,13 @@
   &-title {
     font-size: 48px;
     margin-bottom: 10px;
-    font-weight: 700;
+    @include f700;
     line-height: 72px;
   }
   &-text {
     font-size: 20px;
     margin-bottom: 50px;
-    font-weight: 500;
+    @include f500;
     line-height: 30px;
   }
   &-form {
@@ -86,13 +86,12 @@
       height: 56px;
       border: none;
       font-size: 14px;
-      font-weight: 500;
+      @include f500;
       padding-left: 25px;
       padding-right: 60px;
-
       &::placeholder {
         color: #90a4ae;
-        font-weight: 500;
+        @include f500;
       }
     }
   }
@@ -150,7 +149,7 @@
     padding: 10px 30px;
     min-height: 90px;
     align-items: center;
-    font-weight: 500;
+    @include f500;
     border-bottom: 1px solid #e7ecf2;
   }
   &-name {
@@ -165,7 +164,7 @@
     color: $green;
     display: block;
     font-size: 14px;
-    font-weight: 700;
+    @include f700;
   }
   &-price {
     color: $bg;
@@ -194,7 +193,7 @@
     }
     span {
       font-size: 14px;
-      font-weight: 500;
+      @include f500;
     }
   }
   &-star {
@@ -248,3 +247,65 @@ li {
     outline: none;
   }
 }
+.advanteges {
+  background-color: $bg;
+  padding: 110px 0;
+  text-align: center;
+  .title {
+    color: #fff;
+    margin-bottom: 90px;
+  }
+  .advanteges__item{
+    max-width: 370px;
+    text-align: center;
+    padding: 0px 15px;
+    
+    &:hover{
+      .advanteges__icon-images{
+        background-color: $green;
+      }
+      .advanteges__caption{
+        color: $green;
+      }
+      .advanteges__icon-images{
+         fill: #fff;
+      }
+    }
+
+  }
+  .advanteges__inner {
+    display: flex;
+    justify-content: space-between;
+  }
+  .advanteges__icon {
+    max-width: 370px;
+    text-align: center;
+    padding: 0px 15px;
+    
+    &-images {
+      width: 90px;
+      height: 90px;
+      background-color: #fff;
+      border-radius: 50%;
+      margin-right: 14px;
+      justify-content: center;
+      align-items: center;
+      margin: 0 auto;
+      transition: all .3s;
+    }
+  }
+}
+.advanteges__caption {
+  color: #fff;
+  @include f500;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  font-size: 24px;
+  transition: all .3s;
+}
+.advanteges__text {
+  color: $at;
+  font-size: 15px;
+  line-height: 24px;
+}
+
