--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -8,11 +8,11 @@
 
 @font-face {
   font-family: "icomoon";
-  src: url("../fonts//icomoon.eot?rsail4");
-  src: url("../fonts/icomoon.eot?rsail4#iefix") format("embedded-opentype"),
-    url("../fonts/icomoon.ttf?rsail4") format("truetype"),
-    url("../fonts/icomoon.woff?rsail4") format("woff"),
-    url("../fonts/icomoon.svg?rsail4#icomoon") format("svg");
+  src: url("../fonts/icomoon.eot?6x6ecl");
+  src: url("../fonts/icomoon.eot?6x6ecl#iefix") format("embedded-opentype"),
+    url("../fonts/icomoon.ttf?6x6ecl") format("truetype"),
+    url("../fonts/icomoon.woff?6x6ecl") format("woff"),
+    url("../fonts/icomoon.svg?6x6ecl#icomoon") format("svg");
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -34,8 +34,41 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-search:before {
+  content: "\f002";
+}
+.icon-envelope-o:before {
+  content: "\f003";
+}
+.icon-user:before {
+  content: "\f007";
+}
+.icon-th-large:before {
+  content: "\f009";
+}
+.icon-th-list:before {
+  content: "\f00b";
+}
+.icon-close:before {
+  content: "\f00d";
+}
+.icon-remove:before {
+  content: "\f00d";
+}
+.icon-times:before {
+  content: "\f00d";
+}
+.icon-lock:before {
+  content: "\f023";
+}
 .icon-map-marker:before {
   content: "\f041";
+}
+.icon-edit:before {
+  content: "\f044";
+}
+.icon-pencil-square-o:before {
+  content: "\f044";
 }
 .icon-chevron-right:before {
   content: "\f054";
@@ -43,8 +76,53 @@
 .icon-shopping-cart:before {
   content: "\f07a";
 }
+.icon-heart-o:before {
+  content: "\f08a";
+}
 .icon-phone:before {
   content: "\f095";
+}
+.icon-twitter:before {
+  content: "\f099";
+}
+.icon-facebook:before {
+  content: "\f09a";
+}
+.icon-facebook-f:before {
+  content: "\f09a";
+}
+.icon-bell-o:before {
+  content: "\f0a2";
+}
+.icon-briefcase:before {
+  content: "\f0b1";
+}
+.icon-group:before {
+  content: "\f0c0";
+}
+.icon-users:before {
+  content: "\f0c0";
+}
+.icon-pinterest:before {
+  content: "\f0d2";
+}
+.icon-caret-down:before {
+  content: "\f0d7";
+}
+.icon-sort:before {
+  content: "\f0dc";
+}
+.icon-unsorted:before {
+  content: "\f0dc";
+}
+.icon-linkedin:before {
+  content: "\f0e1";
+}
+.icon-comment-o:before {
+  content: "\f0e5";
+}
+.icon-comments-o:before {
+  content: "\f0e6";
 }
 .icon-bolt:before {
   content: "\f0e7";
@@ -52,6 +130,42 @@
 .icon-flash:before {
   content: "\f0e7";
 }
+.icon-angle-right:before {
+  content: "\f105";
+}
+.icon-angle-down:before {
+  content: "\f107";
+}
+.icon-mail-reply:before {
+  content: "\f112";
+}
+.icon-reply:before {
+  content: "\f112";
+}
+.icon-meh-o:before {
+  content: "\f11a";
+}
 .icon-location-arrow:before {
   content: "\f124";
+}
+.icon-cny:before {
+  content: "\f157";
+}
+.icon-jpy:before {
+  content: "\f157";
+}
+.icon-rmb:before {
+  content: "\f157";
+}
+.icon-yen:before {
+  content: "\f157";
+}
+.icon-sort-amount-asc:before {
+  content: "\f160";
+}
+.icon-foursquare:before {
+  content: "\f180";
+}
+.icon-pagelines:before {
+  content: "\f18c";
 }
