--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -56,7 +56,19 @@
   background-size: cover;
   background-position: center;
   min-height: 533px;
+  &.page-search {
+    min-height: 225px;
+    .search__inner {
+      padding: 55px 0px 70px;
+    }
+  }
 }
+.saerch__inner-subtitle {
+  margin-bottom: 30px;
+  color: #fff;
+  @include f700;
+}
+
 .search__inner {
   padding: 155px 0px 100px;
   color: #fff;
@@ -106,6 +118,10 @@
 .products {
   padding: 117px 0px;
   background-color: $grey;
+  display: flex;
+}
+.product-slider__inner {
+  overflow: hidden;
 }
 .products__inner-btn {
   text-align: center;
@@ -126,6 +142,7 @@
     }
   }
 }
+
 .products__inner-box {
   display: flex;
   justify-content: space-between;
@@ -182,8 +199,8 @@
     align-items: center;
     max-width: 245px;
     .avatar {
-      width: 30px;
-      height: 30px;
+      min-width: 30px;
+      min-height: 30px;
       border-radius: 50%;
       margin-right: 14px;
       background-position: center;
@@ -255,23 +272,22 @@ li {
     color: #fff;
     margin-bottom: 90px;
   }
-  .advanteges__item{
+  .advanteges__item {
     max-width: 370px;
     text-align: center;
-    padding: 0px 15px; 
+    padding: 0px 15px;
 
-    &:hover{
-      .advanteges__icon-images{
+    &:hover {
+      .advanteges__icon-images {
         background-color: $green;
       }
-      .advanteges__caption{
+      .advanteges__caption {
         color: $green;
       }
-      .advanteges__icon-images{
-         fill: #fff;
+      .advanteges__icon-images {
+        fill: #fff;
       }
     }
-
   }
   .advanteges__inner {
     display: flex;
@@ -281,7 +297,7 @@ li {
     max-width: 370px;
     text-align: center;
     padding: 0px 15px;
-    
+
     &-images {
       width: 90px;
       height: 90px;
@@ -291,7 +307,7 @@ li {
       justify-content: center;
       align-items: center;
       margin: 0 auto;
-      transition: all .3s;
+      transition: all 0.3s;
     }
   }
 }
@@ -301,14 +317,14 @@ li {
   margin-top: 30px;
   margin-bottom: 30px;
   font-size: 24px;
-  transition: all .3s;
+  transition: all 0.3s;
 }
 .advanteges__text {
   color: $at;
   font-size: 15px;
   line-height: 24px;
 }
-.author{
+.author {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -316,7 +332,7 @@ li {
   display: flex;
   justify-content: center;
   align-items: center;
-  &__box{
+  &__box {
     max-width: 655px;
     width: 100%;
     min-height: 214px;
@@ -325,39 +341,37 @@ li {
     justify-content: center;
     background-color: $green;
   }
-  &__title{
+  &__title {
     color: #fff;
     font-size: 30px;
     line-height: 30px;
     margin-right: 45px;
     max-width: 270px;
-    span{
+    span {
       @include f700;
     }
   }
-  &__btn{
+  &__btn {
     font-size: 18px;
     line-height: 36px;
     color: $bg;
     padding: 15px 40px;
     background-color: #fff;
-
   }
-
 }
-.tutorial{
+.tutorial {
   padding: 70px 0 120px;
-  &__inner{
+  &__inner {
     display: flex;
     justify-content: space-between;
-  &__item{
-    max-width: 370px;
-    width: 100%;
+    &__item {
+      max-width: 370px;
+      width: 100%;
     }
   }
 }
-.tutorial__item{
-  &-img{
+.tutorial__item {
+  &-img {
     min-height: 270px;
     background-repeat: no-repeat;
     background-position: center;
@@ -365,38 +379,38 @@ li {
     min-width: 370px;
     width: 100%;
   }
-  &-text{
+  &-text {
     background-color: #f8f8f8;
     font-size: 24px;
     text-align: center;
     color: $bg;
     @include f700;
-    padding: 30px 10px;   
+    padding: 30px 10px;
   }
 }
-.footer{
+.footer {
   background-color: $bg;
-  &__inner{
+  &__inner {
     padding: 110px 0 100px;
     display: flex;
     justify-content: space-between;
   }
 }
-.footer__item{
+.footer__item {
   max-width: 275px;
   width: 100%;
-  &-menu{
+  &-menu {
     max-width: 230px;
   }
-  &-title{
+  &-title {
     color: #fff;
     font-size: 22px;
-    font-family: 'Raleway', sans-serif;
+    font-family: "Raleway", sans-serif;
     font-weight: 700;
     padding-bottom: 22px;
     margin-bottom: 30px;
     position: relative;
-    &::after{
+    &::after {
       content: "";
       position: absolute;
       bottom: 0;
@@ -404,43 +418,43 @@ li {
       width: 51px;
       height: 3px;
       background-color: $green;
-    }    
+    }
   }
-  &-text{
-  color: #b7c3c8;
-  @include f500;
-  margin-bottom: 30px;
+  &-text {
+    color: #b7c3c8;
+    @include f500;
+    margin-bottom: 30px;
   }
 }
-.footer__info{
-  font-family: 'Lato', sans-serif;
+.footer__info {
+  font-family: "Lato", sans-serif;
   margin-top: 18px;
   color: #fff;
   padding-left: 30px;
   font-weight: 700;
   position: relative;
-  &::before{
+  &::before {
     content: "\f041";
     font-family: "icomoon";
     color: $green;
     font-size: 18px;
     position: absolute;
-    left:0;
+    left: 0;
   }
 }
-.footer__info-phone{
-  &::before{
+.footer__info-phone {
+  &::before {
     content: "\f095";
   }
 }
-.footer__item-list{
-  a{
+.footer__item-list {
+  a {
     margin-bottom: 13px;
     color: #b7c3c8;
     padding-left: 22px;
     padding-right: 45px;
     position: relative;
-    &::before{
+    &::before {
       content: "\f054";
       font-family: "icomoon";
       color: $green;
@@ -450,41 +464,39 @@ li {
     }
   }
 }
-.footer__link{
-margin-bottom: 33px;
-li{
-  & + li{
-    margin-left: 7px;
+.footer__link {
+  margin-bottom: 33px;
+  li {
+    & + li {
+      margin-left: 7px;
+    }
+  }
+  a {
+    width: 28px;
+    height: 28px;
+    background-image: url(../img/css_sprites.png);
   }
 }
-a{
-  width: 28px;
-  height: 28px;
-  background-image: url(../img/css_sprites.png);
-  }
-}
-.link-twitter{
+.link-twitter {
   background-position: -28px 0;
-
 }
-.link-youtube{
+.link-youtube {
   background-position: -56px 0;
-
 }
-.link-pinterest{
+.link-pinterest {
   background-position: -84px 0;
 }
-.link-linkin{
+.link-linkin {
   background-position: -112px 0;
 }
-.footer__form-title{
-  font-size: 20px;   
+.footer__form-title {
+  font-size: 20px;
   color: #fff;
   margin-bottom: 15px;
 }
-.footer__form{
+.footer__form {
   position: relative;
-  input{
+  input {
     padding-left: 13px;
     padding-right: 50px;
     background-color: #2f3c43;
@@ -495,11 +507,11 @@ a{
     font-size: 14px;
     height: 40px;
     &::placeholder {
-    color: #5c666b;
+      color: #5c666b;
     }
   }
-  button{
-   bottom: 0;;
+  button {
+    bottom: 0;
     right: 0;
     background-color: $green;
     position: absolute;
@@ -507,23 +519,19 @@ a{
     height: 40px;
     width: 45px;
     cursor: pointer;
-    &::before{
+    &::before {
       content: "\f124";
       font-family: "icomoon";
       font-size: 20px;
       color: #fff;
     }
-
   }
 }
-// .placeholder{
-//   color: #5c666b;
-// }
-.footer__copy{
+.footer__copy {
   min-height: 75px;
   border-top: 2px solid #424d53;
- }
-.footer__copy-text{
+}
+.footer__copy-text {
   padding: 30px 0px;
   font-size: 15px;
   color: #919699;
@@ -531,4 +539,341 @@ a{
   @include f700;
   text-align: center;
 }
+.product-page__inner {
+  display: flex;
+  justify-content: space-between;
+  padding-bottom: 11px;
 
+}
+
+.product-page__aside {
+  margin-right: 30px;
+}
+.aside__item {
+  background-color: #fff;
+  border: 1px solid #dcdcdc;
+  padding: 0px 32px 32px;
+  margin-bottom: 30px;
+  width: 270px;
+}
+
+.aside__title {
+  border-bottom: 1px solid #dde3e8;
+  color: $bg;
+  font-size: 20px;
+  background-color: #fff;
+  @include f700;
+  padding: 22px 0px;
+}
+.category__list {
+  padding-top: 10px;
+  li {
+    text-align: start;
+    padding: 10px 0px;
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+    padding-left: 20px;
+    &::before {
+      content: "\f054";
+      font-family: "icomoon";
+      color: $green;
+      font-size: 15px;
+    }
+  }
+  a {
+    color: $bg;
+  }
+  span {
+    color: #99abb4;
+    margin-left: 10px;
+  }
+}
+
+.price-range.aside__item {
+  max-height: 200px;
+}
+.irs-min,
+.irs-max {
+  display: none;
+}
+.irs--flat.irs-line {
+  background-color: #f2f5f8;
+  height: 5px;
+}
+.irs-bar.irs-bar--single {
+  background-color: $bg;
+}
+.irs--flat.irs-handle {
+  width: 16px;
+  height: 16px;
+  border: 4px solid $green;
+  border-radius: 50%;
+}
+.price-range {
+  form {
+    padding-top: 20px;
+  }
+}
+
+  .button__range {
+    position: relative;
+    padding: 16px 10px;
+    text-align: center;
+    background-color: $green;
+    color: #fff;
+    @include f500;
+    width: 100%;
+    display: block;
+    border: none;
+    margin-bottom: 25px;
+    cursor: pointer;
+    &::before {
+      content: "\f002";
+      font-family: "icomoon";
+      position: absolute;
+      color: #fff;
+      font-size: 15px;
+      top: 15px;
+      left: 50px;
+    }    
+  } 
+.product-page__aside{
+  .product__item-img{
+    min-height: 120px;
+  }
+  .product__item{
+    box-shadow: none;
+    padding-bottom: 30px;
+    margin-bottom: 30px;
+    border-bottom: 2px solid #dde3e8;
+  }
+  .product__item-content{
+    padding: 0;
+    min-height: 75px;
+    border-bottom: none;
+  }
+  .product__item-info{
+    padding: 0;
+    min-height: 0;
+  }
+  .product__item-title{
+    font-size: 16px;
+  }
+  .product__item-price{
+    font-size: 16px;
+  }
+  .product__item-starnum{
+   visibility: hidden;
+  }
+  .rate-star{
+   margin-right: 0px;
+  }
+  .product__item-author .avatar{
+    margin-right: 9px;
+  }
+  .iq-ry-container{
+    padding: 0px;
+  }  
+}
+.aside__product-item{
+  .product__item:last-child{
+    border: none;
+    padding-bottom: 0px;
+  }
+  .product__item:first-child{
+    margin-top: 25px;
+  }
+}
+.top-sellers__link{
+  padding: 18px 10px;
+  display: block;
+  background-color: $green;
+  color: #fff;
+  text-align: center;
+  @include f500;
+}
+.product-page__filter{
+  background-color: #fff;
+  padding: 0px 20px;
+  border: 1px solid #dedede;
+  margin-bottom: 30px;
+  height: 60px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  button{
+    cursor: pointer;
+    background-color: transparent;
+    border: none;
+    font-size: 16px;
+    color: #90a4ae;
+    &.active{
+      color: $green;
+    }
+  }
+}
+.product-page__content{
+  width: 100%;
+  padding: 10px 20px;
+  .product__item{
+    max-width: 270px;
+    background-color: #fff;
+  }
+  .product__item-img{
+    min-height: 180px;
+  }
+}
+.product__item-title{
+  font-size: 16px;
+}
+.product-page__filter-sort{
+color: #707070;
+font-size: 14px;
+}
+button.icon-sort-amount-asc{
+  font-size: 18px;
+  color: #455a64;
+}
+button.icon-unsorted{
+  font-size: 14px;
+  color: #707070;
+}
+.icon-th-list{
+  color: #90a4ae;
+}
+.product__item-info{
+  min-height: 65px;
+  padding: 10px 12px;
+}
+.rate-star{
+  margin-right: 5px;
+}
+.jq-ry-comtainer{
+  padding: 0;
+}
+.product-page__items{
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  margin-bottom: 30px;
+}
+.pagination__list{
+  li{
+    display: inline-block;
+    & + li{
+      margin-left: 6px;
+    }
+  }
+  a, span{
+    box-shadow: 0px 1px 2px 0px rgba(205, 214, 222, 0.75);
+    width: 43px;
+    height: 38px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 16px;
+    background-color: #fff;
+    color: $bg;
+    @include f500;
+    &.active{
+      background-color: $red;
+      color: #fff;
+    }
+  }
+}
+
+
+
+
+
+// .middle {
+//   position: relative;
+//   width: 50%;
+//   max-width: 500px;
+// }
+// .slider {
+//   position: relative;
+//   z-index: 1;
+//   height: 6px;
+//   margin: 0 15px;
+//   background-color: #fff;
+// }
+// .slider > .track {
+//   position: absolute;
+//   z-index: 1;
+//   left: 0;
+//   right: 0;
+//   top: 0;
+//   bottom: 0;
+//   border-radius: 6px;
+//   background-color: #f2f5f8;
+//   width: 200px;
+// }
+// .slider > .ranges {
+//   position: absolute;
+//   z-index: 2;
+//   left: 0;
+//   right: 50%;
+//   top: 0;
+//   bottom: 0;
+//   border-radius: 5px;
+//   background-color: #37474f;
+// }
+// .slider > .thumb {
+//   position: absolute;
+//   z-index: 3;
+//   width: 20px;
+//   height: 20px;
+//   background-color: #8bc34a;
+//   border-radius: 50%;
+//   box-shadow: 0 0 0 0 rgba (98, 0, 238, 0.1);
+//   /*   opacity: .4; */
+// }
+// .slider > .thumb.left {
+//   left: 0;
+//   transform: translate(-12px, -6px);
+// }
+// .slider > .thumb.right {
+//   right: 60%;
+//   transform: translate(12px, -6px);
+// }
+// .slider > .thumb.hover {
+//   box-shadow: 0 0 0 20px rgba (98, 0, 238, 0.1);
+// }
+// .slider > .thumb.active {
+//   box-shadow: 0 0 0 40px rgba (98, 0, 238, 0.2);
+// }
+// input[type="range"] {
+//   position: ablosute;
+//   pointer-events: none;
+//   -webkit-appearance: none;
+//   z-index: 2;
+//   height: 2px;
+//   width: 100%;
+//   opacity: 0;
+// }
+// input[type="range"]::-webkit-slider-thumb {
+//   pointer-events: all;
+//   width: 80px;
+//   height: 100px;
+//   border-radius: 0;
+//   border: 0 none;
+//   background-color: red;
+//   // -webkit-appearance: none;
+// }
+// .range {
+//   display: flex;
+//   align-items: center;
+//   margin-top: 50px;
+//   border: none;
+//   padding: 15px 60px;
+//   background-color: $green;
+//   padding-left: 30px;
+//   &::before {
+//     content: "\f002";
+//     font-family: "icomoon";
+//     color: #fff;
+//     font-size: 15px;
+//   }
+// }
