--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -543,7 +543,6 @@ li {
   display: flex;
   justify-content: space-between;
   padding-bottom: 11px;
-
 }
 
 .product-page__aside {
@@ -616,76 +615,76 @@ li {
   }
 }
 
-  .button__range {
-    position: relative;
-    padding: 16px 10px;
-    text-align: center;
-    background-color: $green;
+.button__range {
+  position: relative;
+  padding: 16px 10px;
+  text-align: center;
+  background-color: $green;
+  color: #fff;
+  @include f500;
+  width: 100%;
+  display: block;
+  border: none;
+  margin-bottom: 25px;
+  cursor: pointer;
+  &::before {
+    content: "\f002";
+    font-family: "icomoon";
+    position: absolute;
     color: #fff;
-    @include f500;
-    width: 100%;
-    display: block;
-    border: none;
-    margin-bottom: 25px;
-    cursor: pointer;
-    &::before {
-      content: "\f002";
-      font-family: "icomoon";
-      position: absolute;
-      color: #fff;
-      font-size: 15px;
-      top: 15px;
-      left: 50px;
-    }    
-  } 
-.product-page__aside{
-  .product__item-img{
+    font-size: 15px;
+    top: 15px;
+    left: 50px;
+  }
+}
+.product-page__aside {
+  .product__item-img {
     min-height: 120px;
   }
-  .product__item{
+  .product__item {
     box-shadow: none;
     padding-bottom: 30px;
     margin-bottom: 30px;
     border-bottom: 2px solid #dde3e8;
   }
-  .product__item-content{
+  .product__item-content {
     padding: 0;
     min-height: 75px;
     border-bottom: none;
   }
-  .product__item-info{
+  .product__item-info {
     padding: 0;
     min-height: 0;
   }
-  .product__item-title{
+  .product__item-title {
     font-size: 16px;
   }
-  .product__item-price{
+  .product__item-price {
     font-size: 16px;
   }
-  .product__item-starnum{
-   visibility: hidden;
+  .product__item-starnum {
+    visibility: hidden;
   }
-  .rate-star{
-   margin-right: 0px;
+  .rate-star {
+    margin-right: 0px;
   }
-  .product__item-author .avatar{
+  .product__item-author .avatar {
     margin-right: 9px;
   }
-  .iq-ry-container{
+  .iq-ry-container {
     padding: 0px;
-  }  
+  }
 }
-.aside__product-item{
-  .product__item:last-child{
+.aside__product-item {
+  .product__item:last-child {
     border: none;
     padding-bottom: 0px;
   }
-  .product__item:first-child{
+  .product__item:first-child {
     margin-top: 25px;
   }
 }
-.top-sellers__link{
+.top-sellers__link {
   padding: 18px 10px;
   display: block;
   background-color: $green;
@@ -693,7 +692,7 @@ li {
   text-align: center;
   @include f500;
 }
-.product-page__filter{
+.product-page__filter {
   background-color: #fff;
   padding: 0px 20px;
   border: 1px solid #dedede;
@@ -702,70 +701,73 @@ li {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  button{
+  button {
     cursor: pointer;
     background-color: transparent;
     border: none;
+    outline: none;
     font-size: 16px;
     color: #90a4ae;
-    &.active{
+    &.active {
       color: $green;
     }
   }
 }
-.product-page__content{
+.product-page__content {
   width: 100%;
   padding: 10px 20px;
-  .product__item{
+  .product__item {
     max-width: 270px;
     background-color: #fff;
+    transition: all 0.5s;
   }
-  .product__item-img{
+  .product__item-img {
     min-height: 180px;
   }
 }
-.product__item-title{
+.product__item-title {
   font-size: 16px;
 }
-.product-page__filter-sort{
-color: #707070;
-font-size: 14px;
+.product-page__filter-sort {
+  color: #707070;
+  font-size: 14px;
 }
-button.icon-sort-amount-asc{
+button.icon-sort-amount-asc {
   font-size: 18px;
   color: #455a64;
 }
-button.icon-unsorted{
+button.icon-unsorted {
   font-size: 14px;
   color: #707070;
 }
-.icon-th-list{
+.icon-th-list {
   color: #90a4ae;
 }
-.product__item-info{
+.product__item-info {
   min-height: 65px;
   padding: 10px 12px;
 }
-.rate-star{
+.rate-star {
   margin-right: 5px;
 }
-.jq-ry-comtainer{
+.jq-ry-comtainer {
   padding: 0;
 }
-.product-page__items{
+.product-page__items {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
   margin-bottom: 30px;
 }
-.pagination__list{
-  li{
+.pagination__list {
+  li {
     display: inline-block;
-    & + li{
+    & + li {
       margin-left: 6px;
     }
   }
-  a, span{
+  a,
+  span {
     box-shadow: 0px 1px 2px 0px rgba(205, 214, 222, 0.75);
     width: 43px;
     height: 38px;
@@ -776,104 +778,84 @@ button.icon-unsorted{
     background-color: #fff;
     color: $bg;
     @include f500;
-    &.active{
+    &.active {
       background-color: $red;
       color: #fff;
     }
   }
 }
+.product__item-text {
+  display: none;
+}
+.product__item-price {
+  span {
+    display: none;
+  }
+}
+.product__item-list{
+  display: none;
+  .icon-comment-o,
+  .icon-heart-o {
+    display: inline-block;
+    font-size: 13px;
+    color: #b0bec5;
+    padding-left: 50px;
+    border-left: 1px solid #aeb4bb;
+    position: relative;
+    span {
+      @include f500;
+      color: $bg;
+    }
+    &::before{
+      font-size: 16px;
+      color: $green;
+      position: absolute;
+      top: -1px;
+      left: 20px;
+    }
+  } 
+  .product__item-star{
+    margin-left: auto;
+    margin-right: 30px;
+    }
+}
+.icon-comment-o{
+  padding-right: 30px;
+}
 
 
-
-
-
-// .middle {
-//   position: relative;
-//   width: 50%;
-//   max-width: 500px;
-// }
-// .slider {
-//   position: relative;
-//   z-index: 1;
-//   height: 6px;
-//   margin: 0 15px;
-//   background-color: #fff;
-// }
-// .slider > .track {
-//   position: absolute;
-//   z-index: 1;
-//   left: 0;
-//   right: 0;
-//   top: 0;
-//   bottom: 0;
-//   border-radius: 6px;
-//   background-color: #f2f5f8;
-//   width: 200px;
-// }
-// .slider > .ranges {
-//   position: absolute;
-//   z-index: 2;
-//   left: 0;
-//   right: 50%;
-//   top: 0;
-//   bottom: 0;
-//   border-radius: 5px;
-//   background-color: #37474f;
-// }
-// .slider > .thumb {
-//   position: absolute;
-//   z-index: 3;
-//   width: 20px;
-//   height: 20px;
-//   background-color: #8bc34a;
-//   border-radius: 50%;
-//   box-shadow: 0 0 0 0 rgba (98, 0, 238, 0.1);
-//   /*   opacity: .4; */
-// }
-// .slider > .thumb.left {
-//   left: 0;
-//   transform: translate(-12px, -6px);
-// }
-// .slider > .thumb.right {
-//   right: 60%;
-//   transform: translate(12px, -6px);
-// }
-// .slider > .thumb.hover {
-//   box-shadow: 0 0 0 20px rgba (98, 0, 238, 0.1);
-// }
-// .slider > .thumb.active {
-//   box-shadow: 0 0 0 40px rgba (98, 0, 238, 0.2);
-// }
-// input[type="range"] {
-//   position: ablosute;
-//   pointer-events: none;
-//   -webkit-appearance: none;
-//   z-index: 2;
-//   height: 2px;
-//   width: 100%;
-//   opacity: 0;
-// }
-// input[type="range"]::-webkit-slider-thumb {
-//   pointer-events: all;
-//   width: 80px;
-//   height: 100px;
-//   border-radius: 0;
-//   border: 0 none;
-//   background-color: red;
-//   // -webkit-appearance: none;
-// }
-// .range {
-//   display: flex;
-//   align-items: center;
-//   margin-top: 50px;
-//   border: none;
-//   padding: 15px 60px;
-//   background-color: $green;
-//   padding-left: 30px;
-//   &::before {
-//     content: "\f002";
-//     font-family: "icomoon";
-//     color: #fff;
-//     font-size: 15px;
-//   }
-// }
+.product__item {
+  &.list {
+    max-width: 100%;
+    .product__item-img {
+      width: 240px;
+      float: left;
+      min-height: 100%;
+    }
+    .product__item-list {
+      display: inline-block;
+    }
+    .product__item-text {
+      display: block;
+      color: #a0acb3;
+      font-size: 14px;
+      margin-top: 15px;
+      margin-bottom: 15px;
+    }
+    .product__item-price {
+      font-size: 30px;
+      span {
+        margin-top: 15px;
+        display: block;
+        font-size: 13px;
+        color: #aeb4bb;
+      }
+    }
+    .product__item-name {
+      max-width: 480px;
+    }
+  }
+  .product__item-content {
+    padding-top: 23px;
+  }
+}
