added all new items to the main page

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -26,19 +26,285 @@
 .header__btn-login {
   background-color: $green;
 }
-.header__btn-register {
+.header__btn-register,
+.header__btn-logout {
   background-color: $red;
   margin-left: 7px;
 }
 .header__menu {
   background-color: $bg;
 }
+.header__circle {
+  &.active {
+    display: block;
+  }
+  display: none;
+  position: relative;
+  width: 34px;
+  height: 34px;
+  background-color: #f8f8f8;
+  border-radius: 50%;
+  &::before {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #a0a0a0;
+    font-size: 14px;
+  }
+  // & + .header__circle {
+  //   margin-left: 15px;
+  // }
+  span {
+    position: absolute;
+    width: 18px;
+    height: 18px;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 18px;
+    right: -8px;
+    top: -9px;
+    font-size: 11px;
+    color: #fff;
+  }
+}
+.notification {
+  span {
+    background-color: $yellow;
+  }
+}
+.message {
+  span {
+    background-color: $orange;
+  }
+}
+.basket {
+  span {
+    background-color: $green;
+  }
+}
+.header__box {
+  display: flex;
+  align-items: center;
+}
+.header__btn-login--off {
+  display: none;
+}
+.header__btn-logout {
+  display: none;
+  &.header__btn-login--on {
+    display: block;
+  }
+}
+.user {
+  margin-left: 20px;
+  margin-right: 25px;
+  padding-right: 20px;
+  position: relative;
+  &::before {
+    content: "\f107";
+    font-family: "icomoon";
+    font-size: 16px;
+    color: #707070;
+    position: absolute;
+    top: 0;
+    right: 0;
+  }
+  &__inner {
+    display: flex;
+    align-items: center;
+  }
+  &__info {
+    font-size: 14px;
+    line-height: 24px;
+  }
+  &__img {
+    margin-right: 15px;
+    width: 34px;
+    height: 34px;
+    border-radius: 50%;
+    overflow: hidden;
+  }
+  &__name {
+    @include f500;
+    color: #222;
+  }
+  &__total {
+    color: $green;
+    @include f700;
+  }
+}
+
 .menu {
   display: flex;
   align-items: center;
   height: 60px;
 }
 
+.user__box,
+.basket__box,
+.message__box,
+.notification__box {
+  position: relative;
+  height: 90px;
+  margin-top: 39px;
+  &:hover {
+    .user__menu {
+      height: auto;
+      border-width: 1px;
+      padding: 20px;
+      overflow: auto;
+    }
+  }
+}
+.basket__box,
+.message__box,
+.notification__box {
+  &:hover {
+    .header__circle::before {
+      color: #222;
+      font-weight: 700;
+    }
+  }
+}
+
+.circle__image {
+  width: 75px;
+  height: 55px;
+  padding-right: 12px;
+}
+.user__menu {
+  width: 158px;
+  box-shadow: 0px 16px 20px 0px rgba(216, 216, 216, 0.75);
+  border: 1px solid rgb (204, 204, 204);
+  background-color: #fff;
+  position: absolute;
+  border-top: 1px solid #d3d3d3;
+  padding: 0px 20px;
+  top: 70px;
+  left: 12px;
+  -webkit-transition: all 0.3s;
+  -o-transition: all 0.3s;
+  height: 0px;
+  overflow: hidden;
+  a {
+    color: #546e7a;
+    line-height: 36px;
+    font-size: 13px;
+  }
+}
+.notification__menu,
+.message__menu {
+  .circle__img {
+    margin-right: 20px;
+    width: 48px;
+    height: 48px;
+    border-radius: 50%;
+  }
+  .circle__info {
+    line-height: 18px;
+  }
+  .icons-color::before {
+    color: #ef6c00;
+    font-size: 16px;
+    font-weight: 700;
+  }
+}
+.circle__menu {
+  top: 62px;
+  right: 0;
+  position: absolute;
+  border-top: 1px solid #e0e0e0;
+  height: 0;
+  overflow: hidden;
+  -webkit-transition: all 0.3s;
+  -o-transition: all 0.3s;
+}
+.basket__box,
+.message__box,
+.notification__box {
+  margin-top: 54px;
+  margin-left: 15px;
+  -webkit-transition: all 0.3s;
+  -o-transition: all 0.3s;
+  &:hover {
+    .circle__menu {
+      overflow: hidden;
+      height: auto;
+    }
+    .circle__item {
+      padding: 23px;
+      border-width: 1px;
+    }
+  }
+}
+.circle__item {
+  -o-transition: all 0.3s;
+  width: 269px;
+  background-color: #fff;
+  padding: 0 23px;
+  border: 0px solid #e0e0e0;
+  border-top: none;
+  display: flex;
+  align-items: center;
+  position: relative;
+  &::before {
+    position: absolute;
+    top: 27px;
+    right: 28px;
+    font-size: 16px;
+    color: #b0bec5;
+    font-weight: 700;
+  }
+}
+.circle__name {
+  color: #263238;
+  @include f500;
+}
+.circle__about {
+  color: $green;
+  font-size: 12px;
+}
+.circle__price {
+  color: #000;
+  font-size: 16px;
+  @include f700;
+}
+.circle__date {
+  color: #707070;
+  font-size: 10px;
+}
+
+.basket__amount {
+  padding: 16px 17px 12px;
+  border: 1px solid #e0e0e0;
+  border-top: none;
+  background-color: #fff;
+}
+.basket__title {
+  display: flex;
+  justify-content: space-between;
+  padding-left: 15px;
+  padding-right: 25px;
+  margin-top: 15px;
+  @include f700;
+  color: $bg;
+  font-size: 17px;
+  margin-bottom: 10px;
+}
+.basket__btn {
+  color: #fff;
+  font-size: 14px;
+  @include f700;
+  padding: 12px 5px;
+  background-color: $green;
+  text-align: center;
+  width: 105px;
+}
+.basket__btn-Checkout {
+  width: 123px;
+  background-color: #e85647;
+}
 .menu__list {
   li {
     display: inline-block;
@@ -51,6 +317,7 @@
     font-size: 14px;
   }
 }
+
 .search {
   background-repeat: no-repeat;
   background-size: cover;
@@ -128,7 +395,7 @@
   margin-top: 30px;
   margin-bottom: 60px;
   button {
-    padding: 12px 21px;
+    padding: 12px 15px;
     border: none;
     background-color: #fff;
     color: $bg;
@@ -792,7 +1059,7 @@ button.icon-unsorted {
     display: none;
   }
 }
-.product__item-list{
+.product__item-list {
   display: none;
   .icon-comment-o,
   .icon-heart-o {
@@ -806,23 +1073,22 @@ button.icon-unsorted {
       @include f500;
       color: $bg;
     }
-    &::before{
+    &::before {
       font-size: 16px;
       color: $green;
       position: absolute;
       top: -1px;
       left: 20px;
     }
-  } 
-  .product__item-star{
+  }
+  .product__item-star {
     margin-left: auto;
     margin-right: 30px;
-    }
+  }
 }
-.icon-comment-o{
+.icon-comment-o {
   padding-right: 30px;
 }
-
 
 .product__item {
   &.list {
