--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -109,3 +109,16 @@ body {
     }
   }
 }
+.angle-right {
+  position: relative;
+  padding-left: 15px;
+  &::before {
+    position: absolute;
+    content: "\f105";
+    font-family: "icomoon";
+    color: $green;
+    font-size: 15px;
+    left: 0;
+    top: 0;
+  }
+}
