--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -4,6 +4,8 @@ $green: #8bc34a;
 $bg: #263238;
 $grey: #f4f6f5;
 $at: #b0bec5;
+$orange: #ef6c00;
+$yellow: #fcb322;
 
 @mixin f500 {
   font-family: "Roboto", sans-serif;
